feat: Add a profile service

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,6 @@ tags
 
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
+
+# Google credentials file
+superego-*.json
