--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,7 @@ script:
 after_success:
 - gcloud docker -- push ${GCR_HOSTNAME}/${GCP_PROJECT_ID}/${IMAGE_NAME}:${TAG}
 - gcloud --version
+- gcloud components install kubectl
 - gcloud components update kubectl
 before_deploy:
 - gcloud --quiet components update kubectl
