--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ before_install:
 - openssl aes-256-cbc -K $encrypted_457358ef82be_key -iv $encrypted_457358ef82be_iv
   -in superego-b60ee40757c8.json.enc -out ./cmd/superego/superego-b60ee40757c8.json
   -d
-- cp ./cmd/superego/superego-b60ee40757c8.json ./service/
+- cp ./cmd/superego/superego-b60ee40757c8.json ./pkg/service/
 - if [ ! -d ${HOME}/google-cloud-sdk ]; then curl https://sdk.cloud.google.com | bash;
   fi
 - gcloud auth activate-service-account --key-file ./cmd/superego/superego-b60ee40757c8.json
