--- a/cmd/superego/Dockerfile
+++ b/cmd/superego/Dockerfile
@@ -1,4 +1,4 @@
 FROM golang:onbuild
-ENV PROJECT_ID superego-173310
+ENV GCP_PROJECT_ID superego-173310
 ENV GOOGLE_APPLICATION_CREDENTIALS superego-b60ee40757c8.json
-EXPOSE 8080
+EXPOSE 8080 8081
