--- a/hack/k8s/deployment.yaml
+++ b/hack/k8s/deployment.yaml
@@ -1,8 +1,11 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: superego
 spec:
+  selector:
+    matchLabels:
+      app: superego
   replicas: 3
   template:
     metadata:
