--- a/hack/k8s/deployment.yaml
+++ b/hack/k8s/deployment.yaml
@@ -14,6 +14,7 @@ spec:
     spec:
       containers:
       - name: superego
-        image: us.gcr.io/superego-173310/superego:latest
+        image: benkim/superego:dev
+        imagePullPolicy: Always
         ports:
         - containerPort: 8080
