--- a/hack/prometheus/prometheus.yml
+++ b/hack/prometheus/prometheus.yml
@@ -1,13 +1,16 @@
 global:
+  # How frequently to scrape targets by default.
   scrape_interval: 15s # By default, scrape targets every 15 seconds.
+
+  # How long until a scrape request times out.
+  # scrape_timeout is set to the global default (10s).
 
   # Attach these labels to any time series or alerts when communicating with
   # external systems (federation, remote storage, Alertmanager).
   external_labels:
     monitor: 'superego-monitor'
 
-# A scrape configuration containing exactly one endpoint to scrape:
-# Here it's Prometheus itself.
+# A list of scrape configurations.
 scrape_configs:
   # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
   - job_name: 'prometheus'
@@ -17,3 +20,22 @@ scrape_configs:
 
     static_configs:
       - targets: ['localhost:9090']
+
+  - job_name: 'superego'
+
+    # How frequently to scrape targets from this job.
+    # scrape_interval is defined by the configured global (15s).
+
+    # Per-scrape timeout when scraping this job.
+    # scrape_timeout is defined by the global default (10s).
+
+    # The HTTP resource path on which to fetch metrics from targets.
+    # metrics_path default to '/metrics'
+
+    # Configures the protocol scheme used for requests.
+    # scheme defaults to 'http'.
+
+    # List of labeled statically configured targets for this job.
+    static_configs:
+      # The targets specified by the static config.
+      - targets: ['localhost:8080']
