Collect superego metrics with Prometheus

--- a/hack/docker/docker-compose.yml
+++ b/hack/docker/docker-compose.yml
@@ -1,4 +1,6 @@
 version: "3"
+networks:
+  superego_network:
 services:
   superego:
     build:
@@ -6,7 +8,11 @@ services:
       dockerfile: hack/docker/Dockerfile
     image: superego:dev
     ports:
+      - 8079:8079
       - 8080:8080
+      - 8081:8081
+    networks:
+      - superego_network
   prometheus:
     image: prom/prometheus
     volumes:
@@ -14,7 +20,10 @@ services:
       - prometheus_data:/prometheus
     command:
       - "--config.file=/etc/prometheus/prometheus.yml"
+      - "--storage.tsdb.path=/prometheus"
     ports:
       - 9090:9090
+    networks:
+      - superego_network
 volumes:
   prometheus_data:
