--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -64,3 +64,7 @@
 [[constraint]]
   name = "github.com/uber/jaeger-client-go"
   version = "2.12.0"
+
+[[constraint]]
+  name = "github.com/uber/jaeger-lib"
+  version = "1.3.0"
